# Sonus

./: .gitignore  Cargo.toml  README.md  index.js  package.json
src/: lib.rs  main.rs
src/audio/: device.rs  mod.rs
src/interface/: gui.rs  mod.rs  window.html
src/interface/settings/: dialog.rs  mod.rs
src/update/: github.rs  mod.rs
