[package]
name = "sonus"
version = "0.1.0"
edition = "2024"
description = "Sonus Digital Audio Workstation"

[dependencies]
eframe = "0.24.0"  # Framework for egui
egui = "0.24.0"    # Immediate mode GUI library
anyhow = "1.0"     # Error handling
log = "0.4"        # Logging
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
semver = "1.0"     # For version comparison
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
dirs = "5.0"       # For finding config directory
futures-executor = "0.3.31"
